Fix issue where print.class.histogram analysis was being output for PrintClassHistogram(Before|After)FullGC.