@@ -28,9 +28,6 @@ import junit.framework.TestCase;
  */
 public class TestAnalysis extends TestCase {
 
-    /**
-     * Test if biased locking disabled with -XX:-UseBiasedLocking.
-     */
     public void testBisasedLockingDisabled() {
         String jvmOptions = "Xss128k -XX:-UseBiasedLocking -Xms2048M";
         GcManager jvmManager = new GcManager();
@@ -41,9 +38,6 @@ public class TestAnalysis extends TestCase {
                 jvmRun.getAnalysisKeys().contains(Analysis.KEY_BIASED_LOCKING_DISABLED));
     }
 
-    /**
-     * Test if biased locking disabled with -XX:-UseBiasedLocking.
-     */
     public void testPrintClassHistogramEnabled() {
         String jvmOptions = "Xss128k -XX:+PrintClassHistogram -Xms2048M";
         GcManager jvmManager = new GcManager();
@@ -52,11 +46,40 @@ public class TestAnalysis extends TestCase {
         jvmRun.doAnalysis();
         Assert.assertTrue(Analysis.KEY_PRINT_CLASS_HISTOGRAM + " analysis not identified.",
                 jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_CLASS_HISTOGRAM));
+        Assert.assertFalse(Analysis.KEY_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC + " analysis incorrectly identified.",
+                jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC));
+        Assert.assertFalse(Analysis.KEY_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC + " analysis incorrectly identified.",
+                jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC));
     }
 
-    /**
-     * Test if biased locking disabled with -XX:-UseBiasedLocking.
-     */
+    public void testPrintClassHistogramAfterFullGcEnabled() {
+        String jvmOptions = "Xss128k -XX:+PrintClassHistogramAfterFullGC -Xms2048M";
+        GcManager jvmManager = new GcManager();
+        Jvm jvm = new Jvm(jvmOptions, null);
+        JvmRun jvmRun = jvmManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        jvmRun.doAnalysis();
+        Assert.assertTrue(Analysis.KEY_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC + " analysis not identified.",
+                jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC));
+        Assert.assertFalse(Analysis.KEY_PRINT_CLASS_HISTOGRAM + " analysis incorrectly identified.",
+                jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_CLASS_HISTOGRAM));
+        Assert.assertFalse(Analysis.KEY_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC + " analysis incorrectly identified.",
+                jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC));
+    }
+
+    public void testPrintClassHistogramBeforeFullGcEnabled() {
+        String jvmOptions = "Xss128k -XX:+PrintClassHistogramBeforeFullGC -Xms2048M";
+        GcManager jvmManager = new GcManager();
+        Jvm jvm = new Jvm(jvmOptions, null);
+        JvmRun jvmRun = jvmManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        jvmRun.doAnalysis();
+        Assert.assertTrue(Analysis.KEY_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC + " analysis not identified.",
+                jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC));
+        Assert.assertFalse(Analysis.KEY_PRINT_CLASS_HISTOGRAM + " analysis incorrectly identified.",
+                jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_CLASS_HISTOGRAM));
+        Assert.assertFalse(Analysis.KEY_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC + " analysis incorrectly identified.",
+                jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC));
+    }
+
     public void testPrintApplicationConcurrentTime() {
         String jvmOptions = "Xss128k -XX:+PrintGCApplicationConcurrentTime -Xms2048M";
         GcManager jvmManager = new GcManager();
@@ -67,9 +90,6 @@ public class TestAnalysis extends TestCase {
                 jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_GC_APPLICATION_CONCURRENT_TIME));
     }
 
-    /**
-     * Test for -XX:+TraceClassUnloading.
-     */
     public void testTraceClassUnloading() {
         String jvmOptions = "Xss128k -XX:+TraceClassUnloading -Xms2048M";
         GcManager jvmManager = new GcManager();
@@ -80,9 +100,6 @@ public class TestAnalysis extends TestCase {
                 jvmRun.getAnalysisKeys().contains(Analysis.KEY_TRACE_CLASS_UNLOADING));
     }
 
-    /**
-     * Test for -XX:CompressedClassSpaceSize.
-     */
     public void testCompressedClassSpaceSize() {
         String jvmOptions = "Xss128k -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -Xms2048M";
         GcManager jvmManager = new GcManager();
@@ -93,9 +110,6 @@ public class TestAnalysis extends TestCase {
                 jvmRun.getAnalysisKeys().contains(Analysis.KEY_COMPRESSED_CLASS_SPACE_NOT_SET));
     }
 
-    /**
-     * Test for -XX:CompressedClassSpaceSize.
-     */
     public void testPrintFlsStatistics() {
         String jvmOptions = "Xss128k -XX:PrintFLSStatistics=1 -Xms2048M";
         GcManager jvmManager = new GcManager();
@@ -106,9 +120,6 @@ public class TestAnalysis extends TestCase {
                 jvmRun.getAnalysisKeys().contains(Analysis.KEY_PRINT_FLS_STATISTICS));
     }
 
-    /**
-     * Test for -XX:CompressedClassSpaceSize.
-     */
     public void testPermMetatspaceNotSet() {
         String jvmOptions = "Xss128k -Xms2048M";
         GcManager jvmManager = new GcManager();
@@ -119,9 +130,6 @@ public class TestAnalysis extends TestCase {
                 jvmRun.getAnalysisKeys().contains(Analysis.KEY_PERM_METASPACE_SIZE_NOT_SET));
     }
 
-    /**
-     * Test for -XX:CompressedClassSpaceSize.
-     */
     public void testTieredCompilation() {
         String jvmOptions = "Xss128k -XX:+TieredCompilation -Xms2048M";
         GcManager jvmManager = new GcManager();
